style.css
* {
	padding: 0;
	margin: 0;
	list-style-type: none;
}

body,
html {
	height: 100%;
	box-sizing: border-box;
}

.container {
	display: grid;
	grid-template-columns: 1fr 6fr;
}

.sidebar {
	background-color: grey;
	height: 100vh;
}

.tab {
	display: grid;
	grid-template-columns: 0.2fr 1fr;
	text-align: left;
	align-items: center;
	font-size: 1.5rem;
	column-gap: 10px;
}

.tab-section {
	display: flex;
	flex-direction: column;
	margin-top: 10px;
	margin-bottom: 40px;
	margin-left: 10px;
}

.content {
	display: grid;
	height: 100vh;
	grid-template-rows: 0.6fr 0.8fr 5fr;
}

.header1 {
	display: flex;
	justify-content: space-around;
	align-items: center;
}

.search {
	display: flex;
	gap: 2px;
	width: 100%;
	margin-left: 20px;
}

.search img {
	height: 19.33px; /* Height of the Input Box*/
}

.search input {
	width: 90%;
}

.user-nav {
	display: flex;
	justify-content: flex-end;
	align-items: center;
	margin-right: 20px;
	gap: 20px;
}

.header2 {
	background-color: lightgrey;

	display: flex;
	align-items: center;
	justify-content: space-between;
}

.user-information {
	margin-left: 20px;
	display: flex;
	align-items: center;
}

.user-information .column {
	display: flex;
	flex-direction: column;
}

.buttons {
	margin-right: 20px;
}

.menu {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-template-rows: 0.1fr repeat(auto, auto);
	gap: 10px;
}

.menu-header {
	grid-column: 1 / 4;

	display: flex;
	justify-content: space-between;
	margin-top: 10px;
	margin-left: 20px;
	margin-right: 20px;
}

.projects {
	grid-column: 1 / 3;
	grid-row: 2 / 7;

	display: grid;
	grid-template-columns: repeat(auto-fit, 330px);
	grid-template-rows: repeat(3, 1fr);

	gap: 20px;
	margin-left: 20px;
	margin-right: 20px;
	height: 100%;
}

.card {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	/*Make it look nice stuff*/
	margin-bottom: 10px;
	border: 0;
	border-left: 5px;
	border-radius: 5px;
	border-color: orange;
	border-style: solid;
	box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.363);
}

.card .container {
	margin: 10px;

	display: flex;
	flex-direction: column;
}

.images {
	display: flex;
	justify-content: flex-end;
	gap: 10px;
	margin-right: 20px;
	margin-bottom: 10px;
}

.images > img {
	width: 5%;
}

.menu-sidebar {
	height: 100%;
	grid-row: 2 / 7;

	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.menu-sidebar .trending {
	grid-row: 5 / 7;
}

.news{
	height: 100%;
}

.news .project-title {
	border: 0;
	border-bottom: 1px;
	border-style: solid;
	border-color: rgba(0, 0, 0, 0.5);
}

.news .card {
	margin-right: 20px;
	border: 0;
}

.trending {
	height: 100%;
}

.trending .project-title {
	border: 0;
	border-bottom: 1px;
	border-style: solid;
	border-color: rgba(0, 0, 0, 0.5);
}

.trending .card {
	margin-right: 20px;
	border: 0;
}

.bold {
	font-weight: bold;
}

.larger {
	font-size: 1.5rem;
}

.smaller {
	font-size: 0.5rem;
}

.small {
	font-size: 0.6rem;
}

.project-title {
	font-size: 0.8rem;
	font-weight: bold;
}

